Refatorando controllers e services
