# server/api/router.js
@@ -1,5 +1,6 @@
 import * as express from 'express';
 import ProfessionalController from './controllers/ProfessionalController';
+import ProfessionalTypeController from './controllers/ProfessionalTypeController';
 
 export default express
   .Router()
@@ -7,4 +8,5 @@ export default express
   .get('/:id', ProfessionalController.getOne)
   .post('/', ProfessionalController.create)
   .put('/:id', ProfessionalController.update)
-  .delete('/:id', ProfessionalController.delete);
+  .delete('/:id', ProfessionalController.delete)
+  .get('/professional_type', ProfessionalTypeController.list);
